# reflectplusplus

./: CMakeLists.txt
src/demo/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  demo.cpp
src/reflectplusplus/: CMakeLists.txt  property.h  reflectplusplus.cpp  registration.h  type.cpp  type.h
src/reflectplusplus/detail/: string_util.cpp  string_util.h
